infra/main.tf
resource "aws_vpc" "main" {
  tags = {
    Name = "task-manager-vpc"
  }
  cidr_block = "10.0.0.0/16"
}

resource "aws_subnet" "private_1a" {
  vpc_id                          = "vpc-0d36eccf71cddeda7"
  cidr_block                      = "10.0.128.0/20"
  availability_zone               = "eu-west-1a"
  map_public_ip_on_launch         = false
  assign_ipv6_address_on_creation = false
  tags = {
    Name = "task-manager-subnet-private1-eu-west-1a"
  }
}

resource "aws_subnet" "private_1b" {
  vpc_id                          = "vpc-0d36eccf71cddeda7"
  cidr_block                      = "10.0.144.0/20"
  availability_zone               = "eu-west-1b"
  map_public_ip_on_launch         = false
  assign_ipv6_address_on_creation = false
  tags = {
    Name = "task-manager-subnet-private2-eu-west-1b"
  }
}

resource "aws_subnet" "public_1a" {
  vpc_id                          = "vpc-0d36eccf71cddeda7"
  cidr_block                      = "10.0.0.0/20"
  availability_zone               = "eu-west-1a"
  map_public_ip_on_launch         = false
  assign_ipv6_address_on_creation = false
  tags = {
    Name = "task-manager-subnet-public1-eu-west-1a"
  }
}

resource "aws_subnet" "public_1b" {
  vpc_id                          = "vpc-0d36eccf71cddeda7"
  cidr_block                      = "10.0.16.0/20"
  availability_zone               = "eu-west-1b"
  map_public_ip_on_launch         = false
  assign_ipv6_address_on_creation = false
  tags = {
    Name = "task-manager-subnet-public2-eu-west-1b"
  }
}

resource "aws_internet_gateway" "task_manager" {
  vpc_id = "vpc-0d36eccf71cddeda7"
  tags = {
    Name = "task-manager-igw"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "task-manager-rtb-public"
  }
}

resource "aws_route" "public_to_igw" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.task_manager.id
}

resource "aws_route_table_association" "public_1a" {
  subnet_id      = aws_subnet.public_1a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_1b" {
  subnet_id      = aws_subnet.public_1b.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private_1a" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "task-manager-rtb-private1-eu-west-1a"
  }
}

resource "aws_route_table_association" "private_1a" {
  subnet_id      = aws_subnet.private_1a.id
  route_table_id = aws_route_table.private_1a.id
}

resource "aws_route_table" "private_1b" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "task-manager-rtb-private2-eu-west-1b"
  }
}

resource "aws_route_table_association" "private_1b" {
  subnet_id      = aws_subnet.private_1b.id
  route_table_id = aws_route_table.private_1b.id
}

resource "aws_security_group" "ec2" {
  name        = "task-manager-ec2-sg"
  description = "SSH access from my IP for task-manager EC2"
  vpc_id      = aws_vpc.main.id
}

resource "aws_security_group" "db" {
  name        = "task-manager-db-sg"
  description = "PostgreSQL access from task-manager-ec2 only"
  vpc_id      = aws_vpc.main.id
}

resource "aws_vpc_security_group_ingress_rule" "ec2_ssh_home" {
  security_group_id = aws_security_group.ec2.id
  ip_protocol       = "tcp"
  from_port         = 22
  to_port           = 22
  cidr_ipv4         = "88.11.252.248/32"
  description       = "SSH from home"
}

resource "aws_vpc_security_group_ingress_rule" "ec2_http_home" {
  security_group_id = aws_security_group.ec2.id
  ip_protocol       = "tcp"
  from_port         = 8080
  to_port           = 8080
  cidr_ipv4         = "88.11.252.248/32"
  description       = "TCP port 8080"
}

resource "aws_vpc_security_group_egress_rule" "ec2_all_out" {
  security_group_id = aws_security_group.ec2.id
  ip_protocol       = "-1"
  cidr_ipv4         = "0.0.0.0/0"
}

resource "aws_vpc_security_group_ingress_rule" "db_postgres_from_ec2" {
  security_group_id            = aws_security_group.db.id
  ip_protocol                  = "tcp"
  from_port                    = 5432
  to_port                      = 5432
  referenced_security_group_id = aws_security_group.ec2.id
  description                  = "PostgreSQL from EC2 app tier"
}

resource "aws_vpc_security_group_egress_rule" "db_all_out" {
  security_group_id = aws_security_group.db.id
  ip_protocol       = "-1"
  cidr_ipv4         = "0.0.0.0/0"
}

resource "aws_vpc_endpoint" "s3" {
  vpc_id            = aws_vpc.main.id
  service_name      = "com.amazonaws.eu-west-1.s3"
  vpc_endpoint_type = "Gateway"
  route_table_ids = [
    aws_route_table.private_1a.id,
    aws_route_table.private_1b.id
  ]
  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Sid    = "ListAllMyBuckets"
        Effect = "Allow"
        Action = "s3:ListAllMyBuckets"
        Principal = {
          AWS = aws_iam_role.ec2_task_manager.arn
        }
        Resource = "*"
      },
      {
        Sid    = "ListSpecificBucket"
        Effect = "Allow"
        Action = "s3:ListBucket"
        Principal = {
          AWS = aws_iam_role.ec2_task_manager.arn
        }
        Resource = "arn:aws:s3:::toleflaco-task-manager-uploads-2026"
      },
      {
        Sid    = "ReadWriteObjects"
        Effect = "Allow"
        Action = [
          "s3:PutObject",
          "s3:GetObject"
        ]
        Principal = {
          AWS = aws_iam_role.ec2_task_manager.arn
        }
        Resource = "arn:aws:s3:::toleflaco-task-manager-uploads-2026/*"
      }
    ]
  })
  tags = {
    Name = "task-manager-vpce-s3"
  }
}
